BusOne/src/objects/Account_Plan_vod__c.object
<CustomObject>
    <description>This object stores all Account Plan header data</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to master account.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Plan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if account plan is active.  Must be checked to be utilized in a Meeting Brief.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the related account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Plan_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <description>Used to store the channel value.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>MCO Confirmed</fullName>
                </value>
                <value>
                    <fullName>PBMReport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Clients_Using__c</fullName>
        <label>Clients Using</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>It is used to Store BOT Account Id. It is used in Trigger, to update SFDC Account Id on Plan demographics. It is a hidden field.</description>
        <label>BOT_Entity_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to populate merged Formulary names on Account detail page</description>
        <label>Formulary Product</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipName>PlanDemographics_Formulary_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Used__c</fullName>
        <label>Formulary Used</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Lives_Covered_PBMRx__c</fullName>
        <label>Lives Covered PBMRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_No_of_Client__c</fullName>
        <label>No of Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_PBM__c</fullName>
        <label>PBM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Per_of_Lives_Covered__c</fullName>
        <label>% of Lives Covered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Percentage_of_Clients__c</fullName>
        <label>% of Clients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_ID__c</fullName>
        <description>Used to store the Account Plan ID.</description>
        <label>Plan ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Lives_Rx__c</fullName>
        <description>Used to store the Product Lives RX</description>
        <label>Product Lives Rx</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type_ID__c</fullName>
        <description>Used to store the Product type ID</description>
        <label>Product Type ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Product_Type__c</fullName>
        <description>Used to store the product type name.</description>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Plan_Tactics_vod__c</fullName>
        <label>Completed Plan Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of account plan.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_vod__c</fullName>
        <description>Indicated the overall health of the account plan</description>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green_vod</fullName>
                </value>
                <value>
                    <fullName>Yellow_vod</fullName>
                </value>
                <value>
                    <fullName>Red_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>SWOT: Opportunities</description>
        <label>Opportunities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBM_Type__c</fullName>
        <description>To store the PBM Layout record type values only</description>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_vod__c</fullName>
        <description>Percent Complete</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_Progress_vod__c</fullName>
        <label>Plan Tactic Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of account plan.  The field is used in the workflow approval process.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>SWOT: Strengths</description>
        <label>Strengths</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats__c</fullName>
        <description>SWOT: Threats</description>
        <label>Threats</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Plan_Tactics_vod__c</fullName>
        <label>Total Plan Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of account plan such as National, Regional or Local.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>MCO Confirmed</fullName>
                </value>
                <value>
                    <fullName>PBMReport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>SWOT: Weaknesses</description>
        <label>Weaknesses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plans</label>
    <nameField>
        <label>Plan Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Plans</description>
        <label>Account_Plan_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOT_Commercial</fullName>
        <active>true</active>
        <description>Used to store the Commercial plans.</description>
        <label>BOT Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBM</fullName>
        <active>true</active>
        <description>Used for PBM Plan Demographies</description>
        <label>PBM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>